--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <center>
     <div id="game">
     <p id="attempt"></p><br>
-    <img src="0.png" alt="0 mistake" id="hangman"><br>
+    <img src="0.png" alt="An error occured. Please refresh the page." id="hangman"><br>
     <button onclick="A()">A</button>
     <button onclick="B()">B</button>
     <button onclick="C()">C</button>
