--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </ul>
         <h2>Important: Keep in Mind</h2>
         <ul>
-            <li>All the 193 UN member countries + <b>PALESTINE</b> and <b>VATICAN CITY</b> are included.</li>
+            <li>All the 193 UN member countries + <b>Taiwan</b>, <b>PALESTINE</b> and <b>VATICAN CITY</b> are included.</li>
             <li>The <b>ENGLISH</b> name for all the countries has been used. Eg - Türkiye is written as <b>TURKEY</b>, Côte d'Ivoire is written as <b>IVORY COAST</b>, Cabo Verde is written as <b>CAPE VERDE</b>, and Timor-Leste is written as <b>EAST TIMOR</b>. Any accent marks or symbols atop letters that are not in English are excluded.</li>
             <li>The most used names of the countries are used, not the full name. Eg - United Kingdom of Great Britain and Northern Ireland is written as <b>UNITED KINGDOM</b>. </li>
             <li>There is no <b>'THE'</b> at the beginning of country names, but they can be somewehere in there.</li>
